New branch for command system

--- a/uvision works read from ADC0/Objects/Blank.build_log.htm
+++ b/uvision works read from ADC0/Objects/Blank.build_log.htm
@@ -21,23 +21,43 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.1.0.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-D:\Novikov\projects\DAC_plus\another_try\uvision works read from ADC0\Blank.uvprojx
+D:\Novikov\git_project\uvision works read from ADC0\Blank.uvprojx
 Project File Date:  12/28/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'Target 1'
 Note: source file '.\CustomLibs\src\DMA_for_proj.c' - object file renamed from '.\Objects\DMA_for_proj.o' to '.\Objects\dma_for_proj_1.o'.
-creating preprocessor file for MDR32F9Qx_audio.c...
-creating preprocessor file for MDR32F9Qx_arinc429r.c...
-creating preprocessor file for system_MDR32F9Qx.c...
-creating preprocessor file for MDR32F9Qx_comp.c...
-creating preprocessor file for MDR32F9Qx_adc.c...
-creating preprocessor file for MDR32F9Qx_bkp.c...
 creating preprocessor file for main.c...
 creating preprocessor file for MDR32F9Qx_arinc429t.c...
-creating preprocessor file for MDR32F9Qx_can.c...
 creating preprocessor file for MDR32F9Qx_dac.c...
+creating preprocessor file for MDR32F9Qx_adc.c...
+creating preprocessor file for MDR32F9Qx_arinc429r.c...
+creating preprocessor file for MDR32F9Qx_comp.c...
+creating preprocessor file for MDR32F9Qx_audio.c...
+creating preprocessor file for MDR32F9Qx_can.c...
+creating preprocessor file for system_MDR32F9Qx.c...
+creating preprocessor file for MDR32F9Qx_bkp.c...
+creating preprocessor file for MDR32F9Qx_dma.c...
+creating preprocessor file for MDR32F9Qx_dsp.c...
+creating preprocessor file for MDR32F9Qx_eeprom.c...
+creating preprocessor file for MDR32F9Qx_ebc.c...
+creating preprocessor file for MDR32F9Qx_keypad.c...
+creating preprocessor file for MDR32F9Qx_iwdg.c...
+creating preprocessor file for MDR32F9Qx_i2c.c...
+creating preprocessor file for MDR32F9Qx_led.c...
+creating preprocessor file for MDR32F9Qx_mil_std_1553.c...
+creating preprocessor file for MDR32F9Qx_eth.c...
+creating preprocessor file for MDR32F9Qx_port.c...
+creating preprocessor file for MDR32F9Qx_power.c...
+creating preprocessor file for MDR32F9Qx_rst_clk.c...
+creating preprocessor file for MDR32F9Qx_sdio.c...
+creating preprocessor file for MDR32F9Qx_ssp.c...
+creating preprocessor file for MDR32F9Qx_timer.c...
+creating preprocessor file for MDR32F9Qx_usb.c...
+creating preprocessor file for MDR32F9Qx_uart.c...
+creating preprocessor file for MDR32F9Qx_wwdg.c...
+creating preprocessor file for MDR32F9Qx_usb_CDC.c...
 main.c(10): warning: In file included from...
 ./SPL/MDR32Fx\MDR32F9Qx_config.h(81): warning: In file included from...
 ./CMSIS/MDR32Fx/DeviceSupport/MDR1986VE9x/inc\MDR32Fx.h(80): warning: In file included from...
@@ -64,31 +84,11 @@ main.c(80): warning: passing arguments to 'execute_command' without a prototype 
                                        ^
 6 warnings generated.
 compiling main.c...
-creating preprocessor file for MDR32F9Qx_ebc.c...
-creating preprocessor file for MDR32F9Qx_eeprom.c...
-creating preprocessor file for MDR32F9Qx_i2c.c...
-creating preprocessor file for MDR32F9Qx_led.c...
-creating preprocessor file for MDR32F9Qx_keypad.c...
-creating preprocessor file for MDR32F9Qx_iwdg.c...
-creating preprocessor file for MDR32F9Qx_dsp.c...
-creating preprocessor file for MDR32F9Qx_mil_std_1553.c...
-creating preprocessor file for MDR32F9Qx_dma.c...
-creating preprocessor file for MDR32F9Qx_eth.c...
-creating preprocessor file for MDR32F9Qx_port.c...
-creating preprocessor file for MDR32F9Qx_sdio.c...
-creating preprocessor file for MDR32F9Qx_rst_clk.c...
-creating preprocessor file for MDR32F9Qx_ssp.c...
-creating preprocessor file for MDR32F9Qx_power.c...
-creating preprocessor file for MDR32F9Qx_usb.c...
-creating preprocessor file for MDR32F9Qx_wwdg.c...
-creating preprocessor file for MDR32F9Qx_usb_CDC.c...
-creating preprocessor file for MDR32F9Qx_timer.c...
+creating preprocessor file for DMA_for_proj.c...
 creating preprocessor file for MDR32F9Qx_usb_device.c...
-creating preprocessor file for MDR32F9Qx_uart.c...
-creating preprocessor file for Command_system.c...
-creating preprocessor file for SysCLK_for_proj.c...
 creating preprocessor file for ADC_for_proj.c...
-creating preprocessor file for retarget_io.c...
+creating preprocessor file for DAC_for_proj.c...
+creating preprocessor file for SysCLK_for_proj.c...
 CustomLibs/src/ADC_for_proj.c(2): warning: In file included from...
 ./SPL/MDR32Fx/inc\MDR32F9Qx_rst_clk.h(32): warning: In file included from...
 ./SPL/MDR32Fx\MDR32F9Qx_config.h(81): warning: In file included from...
@@ -112,13 +112,22 @@ CustomLibs/src/ADC_for_proj.c(49): warning: implicit conversion from enumeration
     ~~~~~~~~~~~~~  ^~~~~~~~~~~~~~~~~~~~~~~~~
 5 warnings generated.
 compiling ADC_for_proj.c...
-creating preprocessor file for DAC_for_proj.c...
+creating preprocessor file for Command_system.c...
 creating preprocessor file for USB_for_proj.c...
-creating preprocessor file for DMA_for_proj.c...
+CustomLibs/src/Command_system.c(3): warning: In file included from...
+./SPL/MDR32Fx/inc/USB_Library\MDR32F9Qx_usb_CDC.h(32): warning: In file included from...
+./SPL/MDR32Fx\MDR32F9Qx_config.h(81): warning: In file included from...
+./CMSIS/MDR32Fx/DeviceSupport/MDR1986VE9x/inc\MDR32Fx.h(80): warning: In file included from...
+./CMSIS/MDR32Fx/CoreSupport/CM3\core_cm3.h(130): warning: "Compiler generates FPU instructions for a device without an FPU (check __FPU_PRESENT)" [-W#warnings]
+    #warning "Compiler generates FPU instructions for a device without an FPU (check __FPU_PRESENT)"
+     ^
+1 warning generated.
+compiling Command_system.c...
+creating preprocessor file for retarget_io.c...
 linking...
 Program Size: Code=16760 RO-data=804 RW-data=92 ZI-data=28264  
 FromELF: creating hex file...
-".\Objects\Blank.axf" - 0 Error(s), 11 Warning(s).
+".\Objects\Blank.axf" - 0 Error(s), 12 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -158,7 +167,7 @@ Package Vendor: Keil
 
    * Component: Keil.ARM Compiler::Compiler:I/O:STDOUT:ITM:1.2.0
       Source file:   Source/retarget_io.c
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
